// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Google e2e test > should be succesful with structured_output 1`] = `
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "additionalProperties": false,
  "properties": {
    "actualData": {
      "description": "a valid sample date
constraints: a valid date-time",
      "type": "string",
      "x-date": true,
    },
    "arrayMax": {
      "description": "any valid sample array of strings with a maximum of 5 strings
constraints: maximum length 5",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "arrayMin": {
      "description": "any valid sample array of strings with a minimum of 1 string
constraints: minimum length 1",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "date": {
      "description": "a valid sample date
constraints: a valid date-time",
      "type": "string",
      "x-date": false,
    },
    "dateAfter": {
      "description": "a valid sample date after 2024-01-01
constraints: a valid date-time",
      "type": "string",
      "x-date": false,
    },
    "dateBefore": {
      "description": "a valid sample date before today
constraints: a valid date-time",
      "type": "string",
      "x-date": false,
    },
    "default": {
      "default": "test",
      "description": "sample text that is the default value",
      "type": "string",
    },
    "enum": {
      "description": "The letter A, B, or C",
      "enum": [
        "A",
        "B",
        "C",
      ],
      "type": "string",
    },
    "exampleArray": {
      "description": "any valid array of example strings",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "nativeEnum": {
      "description": "The letter A, B, or C",
      "enum": [
        "A",
        "B",
        "C",
      ],
      "type": "string",
    },
    "nullable": {
      "anyOf": [
        {
          "type": "string",
        },
        {
          "type": "null",
        },
      ],
      "description": "leave this field empty as an example of a nullable field",
    },
    "number": {
      "description": "any valid sample number",
      "type": "number",
    },
    "numberGt": {
      "description": "any valid sample number greater than 3
constraints: greater than 3",
      "type": "number",
    },
    "numberGte": {
      "description": "any valid sample number greater than or equal to 1
constraints: greater than or equal to 1",
      "type": "number",
    },
    "numberInt": {
      "description": "any valid sample number that is an integer",
      "type": "integer",
    },
    "numberLt": {
      "description": "any valid sample number less than 6
constraints: lower than 6",
      "type": "number",
    },
    "numberLte": {
      "description": "any valid sample number less than or equal to 1
constraints: lower than or equal to 1",
      "type": "number",
    },
    "numberMultipleOf": {
      "description": "any valid sample number that is a multiple of 2
constraints: multiple of 2",
      "type": "number",
    },
    "object": {
      "additionalProperties": false,
      "description": "any valid sample object with a string and a number",
      "properties": {
        "bar": {
          "type": "number",
        },
        "foo": {
          "type": "string",
        },
      },
      "required": [
        "foo",
        "bar",
      ],
      "type": "object",
    },
    "objectLoose": {
      "additionalProperties": true,
      "description": "any sample object with example keys and data",
      "properties": {},
      "required": [],
      "type": "object",
    },
    "objectNested": {
      "additionalProperties": false,
      "description": "any valid sample data",
      "properties": {
        "user": {
          "additionalProperties": false,
          "properties": {
            "age": {
              "description": "constraints: greater than or equal to 18",
              "type": "number",
            },
            "name": {
              "description": "constraints: minimum length 2",
              "type": "string",
            },
          },
          "required": [
            "name",
            "age",
          ],
          "type": "object",
        },
      },
      "required": [
        "user",
      ],
      "type": "object",
    },
    "objectPassthrough": {
      "additionalProperties": true,
      "description": "any sample object with example keys and data",
      "properties": {},
      "required": [],
      "type": "object",
    },
    "optional": {
      "description": "leave this field empty as an example of an optional field",
      "type": "string",
    },
    "string": {
      "description": "Sample text",
      "type": "string",
    },
    "stringCuid": {
      "description": "a valid sample cuid
constraints: input must match this regex ^[cC][^\\s-]{8,}$",
      "format": "cuid",
      "type": "string",
    },
    "stringEmail": {
      "description": "a sample email address
constraints: a valid email",
      "type": "string",
    },
    "stringEmoji": {
      "description": "a valid sample emoji
constraints: a valid emoji",
      "type": "string",
    },
    "stringMax": {
      "description": "sample text with a maximum of 10 characters
constraints: maximum length 10",
      "type": "string",
    },
    "stringMin": {
      "description": "sample text with a minimum of 5 characters
constraints: minimum length 5",
      "type": "string",
    },
    "stringRegex": {
      "description": "a valid sample string that satisfies the regex
constraints: input must match this regex ^test-",
      "type": "string",
    },
    "stringUrl": {
      "description": "a valid sample url
constraints: a valid uri",
      "type": "string",
    },
    "stringUuid": {
      "description": "a valid sample uuid
constraints: a valid uuid",
      "type": "string",
    },
    "unionObjects": {
      "anyOf": [
        {
          "additionalProperties": false,
          "properties": {
            "amount": {
              "type": "number",
            },
            "inventoryItemName": {
              "type": "string",
            },
          },
          "required": [
            "amount",
            "inventoryItemName",
          ],
          "type": "object",
        },
        {
          "additionalProperties": false,
          "properties": {
            "permissions": {
              "items": {
                "type": "string",
              },
              "type": "array",
            },
            "type": {
              "type": "string",
            },
          },
          "required": [
            "type",
            "permissions",
          ],
          "type": "object",
        },
      ],
      "description": "give an valid object",
    },
    "unionPrimitives": {
      "anyOf": [
        {
          "type": "string",
        },
        {
          "type": "number",
        },
      ],
      "description": "sample text or number",
    },
  },
  "required": [
    "string",
    "stringMin",
    "stringMax",
    "stringEmail",
    "stringEmoji",
    "stringUrl",
    "stringUuid",
    "stringCuid",
    "stringRegex",
    "number",
    "numberGt",
    "numberLt",
    "numberGte",
    "numberLte",
    "numberMultipleOf",
    "numberInt",
    "exampleArray",
    "arrayMin",
    "arrayMax",
    "date",
    "dateAfter",
    "dateBefore",
    "actualData",
    "object",
    "objectNested",
    "objectPassthrough",
    "objectLoose",
    "nullable",
    "enum",
    "nativeEnum",
    "unionPrimitives",
    "unionObjects",
    "default",
  ],
  "type": "object",
}
`;

exports[`Google e2e test > should be succesful with structured_output 2`] = `
{
  "value": {
    "actualData": 2023-10-10T00:00:00.000Z,
    "arrayMax": [
      "a",
      "b",
      "c",
    ],
    "arrayMin": [
      "a",
    ],
    "date": 2023-10-10T00:00:00.000Z,
    "dateAfter": 2024-02-01T00:00:00.000Z,
    "dateBefore": 2023-01-01T00:00:00.000Z,
    "default": "default value",
    "enum": "A",
    "exampleArray": [
      "a",
      "b",
    ],
    "nativeEnum": "B",
    "nullable": null,
    "number": 1.23,
    "numberGt": 4,
    "numberGte": 1,
    "numberInt": 42,
    "numberLt": 5,
    "numberLte": 1,
    "numberMultipleOf": 4,
    "object": {
      "bar": 1,
      "foo": "test",
    },
    "objectLoose": {},
    "objectNested": {
      "user": {
        "age": 18,
        "name": "John",
      },
    },
    "objectPassthrough": {},
    "string": "sample text",
    "stringCuid": "c123456789",
    "stringEmail": "test@example.com",
    "stringEmoji": "😀",
    "stringMax": "abcdef",
    "stringMin": "abcde",
    "stringRegex": "test-123",
    "stringUrl": "https://example.com",
    "stringUuid": "123e4567-e89b-12d3-a456-426614174000",
    "unionObjects": {
      "amount": 1,
      "inventoryItemName": "item",
    },
    "unionPrimitives": 1,
  },
}
`;

exports[`Google e2e test > should handle tool call with manySchemas input 1`] = `
{
  "value": {
    "actualData": 2024-05-20T12:00:00.000Z,
    "arrayMax": [
      "a",
      "b",
      "c",
    ],
    "arrayMin": [
      "test",
    ],
    "date": 2023-10-10T14:48:00.000Z,
    "dateAfter": 2024-02-01T00:00:00.000Z,
    "dateBefore": 2023-01-01T00:00:00.000Z,
    "default": "default text",
    "enum": "A",
    "exampleArray": [
      "foo",
      "bar",
    ],
    "nativeEnum": "B",
    "nullable": null,
    "number": 42.5,
    "numberGt": 4,
    "numberGte": 1,
    "numberInt": 10,
    "numberLt": 5,
    "numberLte": 1,
    "numberMultipleOf": 4,
    "object": {
      "bar": 100,
      "foo": "value",
    },
    "objectLoose": {
      "any": "data",
    },
    "objectNested": {
      "user": {
        "age": 20,
        "name": "Bob",
      },
    },
    "objectPassthrough": {
      "custom": "field",
    },
    "string": "Sample text",
    "stringCuid": "cjld2cjxh0000qzrmn831i7rn",
    "stringEmail": "test@example.com",
    "stringEmoji": "🚀",
    "stringMax": "hello",
    "stringMin": "hello",
    "stringRegex": "test-data",
    "stringUrl": "https://example.com",
    "stringUuid": "550e8400-e29b-41d4-a716-446655440000",
    "unionObjects": {
      "amount": 5,
      "inventoryItemName": "apple",
    },
    "unionPrimitives": 99,
  },
}
`;

exports[`Google e2e test > should handle tool call with manySchemas input and output 1`] = `
"The tool call was successfully executed with the following validated sample data:

\`\`\`json
{
  "actualData": "2024-05-15T12:00:00.000Z",
  "arrayMax": ["a", "b", "c"],
  "arrayMin": ["minimum"],
  "date": "2023-10-15T10:00:00.000Z",
  "dateAfter": "2025-01-01T10:00:00.000Z",
  "dateBefore": "2022-01-01T10:00:00.000Z",
  "default": "default text",
  "enum": "A",
  "exampleArray": ["one", "two"],
  "nativeEnum": "B",
  "nullable": null,
  "number": 42,
  "numberGt": 5,
  "numberGte": 1,
  "numberInt": 10,
  "numberLt": 2,
  "numberLte": 0,
  "numberMultipleOf": 4,
  "object": {
    "bar": 123,
    "foo": "test"
  },
  "objectLoose": {
    "key": "value"
  },
  "objectNested": {
    "user": {
      "age": 25,
      "name": "Alice"
    }
  },
  "objectPassthrough": {
    "key": "value"
  },
  "string": "Sample text",
  "stringCuid": "c123456789",
  "stringEmail": "test@example.com",
  "stringEmoji": "😀",
  "stringMax": "Short",
  "stringMin": "Hello World",
  "stringRegex": "test-data",
  "stringUrl": "https://example.com",
  "stringUuid": "123e4567-e89b-12d3-a456-426614174000",
  "unionObjects": {
    "amount": 10,
    "inventoryItemName": "Widget"
  },
  "unionPrimitives": "Union string"
}
\`\`\`

The payload satisfies all explicit constraints including regex lengths, numeric limits, array item requirements, standard dates, and enum options! Optional fields were omitted, and nullable fields correctly reflected \`null\` values as per instructions."
`;
